--- a/android/搬运代码.md
+++ b/android/搬运代码.md
@@ -131,39 +131,36 @@ mViewPager.setOnPageChangeListener(new ViewPager.OnPageChangeListener() {
 # RecycleView
 ## MyRecyclerViewAdapter
 ```
+
 import android.app.Activity;
 import android.support.v7.widget.RecyclerView;
 import android.view.LayoutInflater;
 import android.view.ViewGroup;
- 
- 
+
+
 import com.example.administrator.ex.R;
-import com.example.administrator.ex.SqlLite.Song;
- 
+
 import java.util.List;
- 
-/**
-* Created by Administrator on 2016/8/26.
-*/
+
 public class MyRecyclerViewAdapter extends RecyclerView.Adapter<MyRecyclerViewHolder>{
-    private List<Song> list;
+    private List<String> list;
     private Activity activity;
-    public MyRecyclerViewAdapter(Activity activity, List<Song> list){
+    public MyRecyclerViewAdapter(Activity activity, List<String> list){
         this.activity=activity;
         this.list=list;
     }
+
     @Override
     public MyRecyclerViewHolder onCreateViewHolder(ViewGroup parent, int viewType) {
-        return new MyRecyclerViewHolder(LayoutInflater.from(activity).inflate(R.layout.item_another2,parent,false),activity);
+        return new MyRecyclerViewHolder(LayoutInflater.from(activity).inflate(R.layout.item_textview,parent,false),activity);
     }
- 
+
     @Override
     public void onBindViewHolder(MyRecyclerViewHolder holder, int position) {
-        holder.textView.setText(list.get(position).getName());
-        holder.textView2.setText(String.valueOf(list.get(position).getDuration()));
+        holder.textView.setText(list.get(position).toString());
 //            ((TextView)holder.itemView.findViewById(R.id.textView_another2)).setText(list.get(position));
     }
- 
+
     @Override
     public int getItemCount() {
         return list.size();
@@ -173,26 +170,22 @@ public class MyRecyclerViewAdapter extends RecyclerView.Adapter<MyRecyclerViewHo
 ## MyRecyclerViewHolder
 ```
 import android.content.Context;
-import android.content.Intent;
 import android.support.v7.widget.RecyclerView;
 import android.view.View;
 import android.widget.TextView;
- 
- 
+
 import com.example.administrator.ex.R;
- 
+
 import butterknife.Bind;
 import butterknife.ButterKnife;
 import butterknife.OnClick;
- 
+
 /**
-* Created by Administrator on 2016/8/26.
-*/
+ * Created by Administrator on 2016/8/26.
+ */
 public class MyRecyclerViewHolder extends RecyclerView.ViewHolder {
     @Bind(R.id.textView)
     TextView textView;
-    @Bind(R.id.textView2)
-    TextView textView2;
     private Context activity;
     public MyRecyclerViewHolder(View itemView, Context activity) {
         super(itemView);
@@ -203,16 +196,44 @@ public class MyRecyclerViewHolder extends RecyclerView.ViewHolder {
 ```
 ## activity
 ```
-            private List<Song> allSongs=new ArrayList<>();
+    @Bind(R.id.recyclerView)
+    RecyclerView mRecyclerView;
+    private ArrayList<String> list = new ArrayList<>();
     private MyRecyclerViewAdapter adapter;
+
     private void initRecycleView() {
-        adapter = new MyRecyclerViewAdapter(this, allSongs);
+        adapter = new MyRecyclerViewAdapter(this, list);
         mRecyclerView.setLayoutManager(new LinearLayoutManager(this));
         //自动滑动到最低,更新List时需要写一次
         mRecyclerView.setAdapter(adapter);
         //adapter.notifyDataSetChanged();
         //mRecyclerView.smoothScrollToPosition(adapter.getItemCount());
     }
+```
+## layout
+recyclerView
+```
+<android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/recyclerView"
+        android:layout_weight="1"/>
+```
+item_textview.xml
+```
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView"
+        android:layout_weight="1"/>
+</LinearLayout>
 ```
 recycleView加载时由于RecyclerView.Adapter会自动回收viewholder,所以存在BUG，导致viewholder复用,所以请每次的onBindViewHolder中viewholder要设置完整
 recycleView的adapter指定的list必须是同一个list,即地址一致,否则会造成数据不刷新,如果非要不同List,请new 一个adapter;
@@ -441,7 +462,8 @@ Glide.with(activity).load(listImage.get(0)).placeholder(R.drawable.account_avata
             });
 ```
 # 数据存储与读取
-## 手机内部数据库(sqlite)
+## 内部数据库
+### 手机自带sqlite
 ```
 initSqlLite();
         queryData_sqlite();
@@ -542,7 +564,7 @@ private void initView() {
         db.close();
     }
 ```
-## 手机内部数据库(litepal)
+### litepal
 compile 'org.litepal.android:core:1.4.0'
 首先在application中注册
 ```
@@ -686,7 +708,7 @@ public String ReadTxtFile(String strFilePath)
 ```
 # 通用组件
 ## DrawerLayout
-### DrawerLayout全部
+### DrawerLayout全部Layout
 ```
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout
@@ -695,7 +717,8 @@ public String ReadTxtFile(String strFilePath)
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/drawerLayout">
+    android:id="@+id/drawerLayout"
+	tools:openDrawer="left">
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -719,21 +742,25 @@ public String ReadTxtFile(String strFilePath)
         android:id="@+id/navigationView"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="start"/>
+        android:layout_gravity="start"
+		app:headerLayout="@layout/nav_header"
+        app:menu="@menu/drawerlayout_menu"/>
 </android.support.v4.widget.DrawerLayout>
 ```
-### DrawerLayout在下面
+### DrawerLayout在下面Layout
 ```
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="match_parent"
     android:layout_height="match_parent">
     <android.support.v4.widget.DrawerLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/drawerLayout">
+        android:id="@+id/drawerLayout"
+		tools:openDrawer="left">
     <android.support.design.widget.AppBarLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent">
@@ -752,9 +779,182 @@ public String ReadTxtFile(String strFilePath)
             android:id="@+id/navigationView"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_gravity="start"/>
+            android:layout_gravity="start"
+			app:headerLayout="@layout/nav_header"
+        	app:menu="@menu/drawerlayout_menu"/>
     </android.support.v4.widget.DrawerLayout>
 </android.support.design.widget.CoordinatorLayout>
+```
+### drawerlayout_menu.xml:
+```
+<?xml version="1.0" encoding="utf-8"?>
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <!--单选模式-->
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/list_navigation_menu_item"
+            android:icon="@drawable/ic_list"
+            android:title="@string/list_title" />
+        <item
+            android:id="@+id/statistics_navigation_menu_item"
+            android:icon="@drawable/ic_statistics"
+        android:title="@string/statistics_title" />
+    </group>
+</menu>
+```
+### nav_header.xml:
+```
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="192dp"
+    android:background="?attr/colorPrimaryDark"
+    android:gravity="bottom"
+    android:orientation="vertical"
+    android:padding="16dp"
+    android:theme="@style/ThemeOverlay.AppCompat.Dark">
+
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:src="@drawable/logo" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center_horizontal"
+        android:text="@string/navigation_view_header_title"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
+</FrameLayout>
+```
+### InitNavigationView()+头像设置;
+```
+@Bind(R.id.navigationView)
+    NavigationView navigationView;
+    private File sdcardTempFile;
+    private Intent intent;
+    private void InitNavigationView() {
+        navigationView.setNavigationItemSelectedListener(new NavigationView.OnNavigationItemSelectedListener() {
+            @Override
+            public boolean onNavigationItemSelected(@NonNull MenuItem item) {
+                item.setChecked(true);
+                mDrawerLayout.closeDrawers();
+                switch (item.getItemId()) {
+                    case R.id.menu_singlePerson: {
+                        showFragment(0);
+                        getSupportActionBar().setTitle(getResources().getString(R.string.app_title_singlePerson));
+                        return true;
+                    }
+                    case R.id.menu_group: {
+                        showFragment(1);
+                        getSupportActionBar().setTitle(getResources().getString(R.string.app_title_group));
+                        return true;
+                    }
+                    case R.id.menu_setting: {
+                        Toast.makeText(getBaseContext(), "setting", Toast.LENGTH_SHORT).show();
+                        return true;
+                    }
+                    case R.id.menu_contactUs: {
+                        Toast.makeText(getBaseContext(), "contactUs", Toast.LENGTH_SHORT).show();
+                        return true;
+                    }
+                    default:return false;
+                }
+            }
+        });
+        View headerView=navigationView.inflateHeaderView(R.layout.nav_header.xml);
+        CircleImageView circleImageView= (CircleImageView) headerView.findViewById(R.id.circleImageView);
+        circleImageView.setOnClickListener(new View.OnClickListener() {
+            @Override
+            public void onClick(View v) {
+                new AlertDialog.Builder(BB2Activity.this).setItems(new String[]{"从相册获取头像", "拍摄头像"}, new DialogInterface.OnClickListener() {
+                    @Override
+                    public void onClick(DialogInterface dialog, int which) {
+                        switch (which){
+                            case 0:{
+                                intent = new Intent(Intent.ACTION_PICK);
+                                intent.setDataAndType(MediaStore.Images.Media.INTERNAL_CONTENT_URI, "image/*");
+                                intent.putExtra("output", Uri.fromFile(new File(Environment.getExternalStorageDirectory(),"bbtouxiang.jpg")));
+                                intent.putExtra("crop", "true");
+                                intent.putExtra("aspectX", 1);// 裁剪框比例
+                                intent.putExtra("aspectY", 1);
+                                startActivityForResult(intent, 0);
+                                break;
+                            }
+                            case 1:{
+                                intent=new Intent(MediaStore.ACTION_IMAGE_CAPTURE);
+                                intent.putExtra(MediaStore.EXTRA_OUTPUT,Uri.fromFile(new File(Environment.getExternalStorageDirectory(),"bbtouxiang2.jpg")));
+                                startActivityForResult(intent,1);
+                                break;
+                            }
+                        }
+                    }
+                }).show();
+            }
+        });
+        navigationView.inflateMenu(R.menu.drawerlayout_menu);
+    }
+	@Override
+    public void initToolBar() {
+        setSupportActionBar(mToolbar);
+        ActionBarDrawerToggle actionBarDrawerToggle=new ActionBarDrawerToggle(this,mDrawerLayout,mToolbar,R.string.navigation_drawer_open,R.string.navigation_drawer_close);
+        mDrawerLayout.addDrawerListener(actionBarDrawerToggle);
+        actionBarDrawerToggle.syncState();
+    }
+    private FileInputStream fileInputStream;
+    private InputStreamReader inputStreamReader;
+    private FileOutputStream fileOutputStream;
+    private OutputStreamWriter outputStreamWriter;
+    private byte c[]=new byte[3000];
+    @Override
+    public void onActivityResult(int requestCode, int resultCode, Intent data) {
+        super.onActivityResult(requestCode, resultCode, data);
+        if(resultCode== Activity.RESULT_OK){
+            if(requestCode==0){
+                try {
+                    fileInputStream=new FileInputStream(new File(Environment.getExternalStorageDirectory(),"bbtouxiang.jpg"));
+                    fileOutputStream=BB2Activity.this.openFileOutput("bbtouxiang.jpg", Context.MODE_PRIVATE);
+                    int bytesum = 0;
+                    int byteread = 0;
+                    while((byteread = fileInputStream.read(c)) != -1){
+                        bytesum += byteread; //字节数 文件大小
+                        System.out.println(bytesum);
+                        fileOutputStream.write(c, 0, byteread);
+                    }
+                    ((ImageView)findViewById(R.id.circleImageView)).setImageBitmap(BitmapFactory.decodeFile(sdcardTempFile.getAbsolutePath()));
+                }
+                catch (IOException e) {
+                    e.printStackTrace();
+                }
+            }
+            else if(requestCode==1){
+                sdcardTempFile = new File(Environment.getExternalStorageDirectory(),"bbtouxiang2.jpg");
+                intent = new Intent("com.android.camera.action.CROP");
+                intent.setDataAndType(Uri.fromFile(sdcardTempFile), "image/*");
+                // crop为true是设置在开启的intent中设置显示的view可以剪裁
+                intent.putExtra("crop", "true");
+                intent.putExtra("output", Uri.fromFile(sdcardTempFile));
+                // aspectX aspectY 是宽高的比例
+                intent.putExtra("aspectX", 1);
+                intent.putExtra("aspectY", 1);
+
+                // outputX,outputY 是剪裁图片的宽高
+                intent.putExtra("outputX", 300);
+                intent.putExtra("outputY", 300);
+                intent.putExtra("return-data", true);
+                intent.putExtra("noFaceDetection", true);
+                startActivityForResult(intent, 11);
+                System.out.println("进入2");
+            }
+            else if(requestCode==11){
+                ((ImageView)findViewById(R.id.circleImageView)).setImageBitmap(BitmapFactory.decodeFile(sdcardTempFile.getAbsolutePath()));
+            }
+            else{
+                Toast.makeText(BB2Activity.this, "请重新选择图片", Toast.LENGTH_SHORT).show();
+            }
+        }
+    }
 ```
 ## CoordinatorLayout
 ```
@@ -790,9 +990,9 @@ public String ReadTxtFile(String strFilePath)
 ### 百度sdk初始化
 androidStudio查看sha1
 
-![enter description here][1]
-
 ![enter description here][2]
+
+![enter description here][3]
 
 其中test2的appkey为我电脑的（每台电脑不同）
 下载SDK
@@ -861,6 +1061,212 @@ private void initMap() {
     }
 ```
 
+## 讯飞语音识别SDK
+sdk下载地址http://www.xfyun.cn/sdk/dispatcher
+![enter description here][4]
+导入libs里的文件
 
-  [1]: ./images/1480438421636.jpg "1480438439355.jpg"
-  [2]: ./images/1480438439355.jpg "1480438421636.jpg"
+armeab/libmsc.so
+Msc.jar
+导入assets里的文件夹iflytek至项目assets中(麦克风对话框所需)
+
+修改gradle_app的jniLibs目录
+```
+android {
+ sourceSets {
+        main {
+            jniLibs.srcDir 'libs'
+        }
+    }
+}
+```
+权限:
+```
+<!--连接网络权限，用于执行云端语音能力 -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <!--获取手机录音机使用权限，听写、识别、语义理解需要用到此权限 -->
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <!--读取网络信息状态 -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <!--获取当前wifi状态 -->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <!--允许程序改变网络连接状态 -->
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
+    <!--读取手机信息权限 -->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <!--读取联系人权限，上传联系人需要用到此权限 -->
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+```
+Application所需添加/
+```
+SpeechUtility.createUtility(this, SpeechConstant.APPID +"=583eaf20");
+```
+```
+import org.json.JSONArray;
+import org.json.JSONObject;
+import org.json.JSONTokener;
+
+/**
+ * Json结果解析类
+ */
+public class JsonParser {
+
+	public static String parseIatResult(String json) {
+		StringBuffer ret = new StringBuffer();
+		try {
+			JSONTokener tokener = new JSONTokener(json);
+			JSONObject joResult = new JSONObject(tokener);
+
+			JSONArray words = joResult.getJSONArray("ws");
+			for (int i = 0; i < words.length(); i++) {
+				// 转写结果词，默认使用第一个结果
+				JSONArray items = words.getJSONObject(i).getJSONArray("cw");
+				JSONObject obj = items.getJSONObject(0);
+				ret.append(obj.getString("w"));
+//				如果需要多候选结果，解析数组其他字段
+//				for(int j = 0; j < items.length(); j++)
+//				{
+//					JSONObject obj = items.getJSONObject(j);
+//					ret.append(obj.getString("w"));
+//				}
+			}
+		} catch (Exception e) {
+			e.printStackTrace();
+		} 
+		return ret.toString();
+	}
+	
+	public static String parseGrammarResult(String json) {
+		StringBuffer ret = new StringBuffer();
+		try {
+			JSONTokener tokener = new JSONTokener(json);
+			JSONObject joResult = new JSONObject(tokener);
+
+			JSONArray words = joResult.getJSONArray("ws");
+			for (int i = 0; i < words.length(); i++) {
+				JSONArray items = words.getJSONObject(i).getJSONArray("cw");
+				for(int j = 0; j < items.length(); j++)
+				{
+					JSONObject obj = items.getJSONObject(j);
+					if(obj.getString("w").contains("nomatch"))
+					{
+						ret.append("没有匹配结果.");
+						return ret.toString();
+					}
+					ret.append("【结果】" + obj.getString("w"));
+					ret.append("【置信度】" + obj.getInt("sc"));
+					ret.append("\n");
+				}
+			}
+		} catch (Exception e) {
+			e.printStackTrace();
+			ret.append("没有匹配结果.");
+		} 
+		return ret.toString();
+	}
+	
+	public static String parseLocalGrammarResult(String json) {
+		StringBuffer ret = new StringBuffer();
+		try {
+			JSONTokener tokener = new JSONTokener(json);
+			JSONObject joResult = new JSONObject(tokener);
+
+			JSONArray words = joResult.getJSONArray("ws");
+			for (int i = 0; i < words.length(); i++) {
+				JSONArray items = words.getJSONObject(i).getJSONArray("cw");
+				for(int j = 0; j < items.length(); j++)
+				{
+					JSONObject obj = items.getJSONObject(j);
+					if(obj.getString("w").contains("nomatch"))
+					{
+						ret.append("没有匹配结果.");
+						return ret.toString();
+					}
+					ret.append("【结果】" + obj.getString("w"));
+					ret.append("\n");
+				}
+			}
+			ret.append("【置信度】" + joResult.optInt("sc"));
+
+		} catch (Exception e) {
+			e.printStackTrace();
+			ret.append("没有匹配结果.");
+		} 
+		return ret.toString();
+	}
+}
+```
+```
+@Bind(R.id.button)
+    Button mButton;
+    @Bind(R.id.editText)
+    EditText mEditText;
+    @Override
+    public void initViews(Bundle bundle) {
+        initXunFei();
+    }
+    private InitListener mInitListener = new InitListener() {
+
+        @Override
+        public void onInit(int code) {
+            Log.d(TAG, "SpeechRecognizer init() code = " + code);
+            if (code != ErrorCode.SUCCESS) {
+                Toast.makeText(XunFeiActivity.this,"初始化失败，错误码：" + code, Toast.LENGTH_SHORT).show();
+            }
+        }
+    };
+    private RecognizerDialogListener mRecognizerDialogListener = new RecognizerDialogListener() {
+        public void onResult(RecognizerResult results, boolean isLast) {
+            printResult(results);
+        }
+        public void onError(SpeechError error) {
+            Toast.makeText(XunFeiActivity.this,error.getPlainDescription(true), Toast.LENGTH_SHORT).show();
+        }
+
+    };
+    private HashMap<String, String> mIatResults = new LinkedHashMap<String, String>();
+
+    private void printResult(RecognizerResult results) {
+        String text = JsonParser.parseIatResult(results.getResultString());
+
+        String sn = null;
+        // 读取json结果中的sn字段
+        try {
+            JSONObject resultJson = new JSONObject(results.getResultString());
+            sn = resultJson.optString("sn");
+        } catch (JSONException e) {
+            e.printStackTrace();
+        }
+        mIatResults.put(sn, text);
+        StringBuffer resultBuffer = new StringBuffer();
+        for (String key : mIatResults.keySet()) {
+            resultBuffer.append(mIatResults.get(key));
+        }
+
+        mEditText.setText(resultBuffer.toString());
+        mEditText.setSelection(mEditText.length());
+    }
+    private void initXunFei() {
+        mButton.setOnClickListener(new View.OnClickListener() {
+            @Override
+            public void onClick(View v) {
+                //1.创建SpeechRecognizer对象，第二个参数：本地听写时传InitListener
+                RecognizerDialog iatDialog = new RecognizerDialog(XunFeiActivity.this, mInitListener);
+                //2.设置听写参数，同上节
+                //3.设置回调接口
+                iatDialog.setListener(mRecognizerDialogListener);
+                //4.开始听写
+                iatDialog.show();
+            }
+        });
+    }
+    @Override
+    public void initToolBar() {
+
+    }
+```
+
+
+  [2]: ./images/1480438421636.jpg "1480438439355.jpg"
+  [3]: ./images/1480438439355.jpg "1480438421636.jpg"
+  [4]: ./images/1480507419140.jpg "1480507419140.jpg"
