--- a/android/基础知识.md
+++ b/android/基础知识.md
@@ -106,6 +106,57 @@ private class Student和{
         }
     }
 ```
+# RxBus
+compile 'com.joy.rxbus:RxBus:1.0.0'
+main:
+```
+Subscription rxSubscription = RxBus.get().toObserverable(UserEvent.class)
+        .subscribe(new Action1<UserEvent>() {
+               @Override
+               public void call(UserEvent userEvent) {
+                   long id = userEvent.getId();
+                   String name = userEvent.getName();
+                   ...
+               }
+           },
+        new Action1<Throwable>() {
+            @Override
+            public void call(Throwable throwable) {
+                // TODO: 处理异常
+            }        
+        });
+```
+定义一个实体
+```
+public class UserEvent {
+    long id;
+    String name;
+    public User Event(long id,String name) {
+        this.id= id;
+        this.name= name;
+    }
+    public long getId() {
+        return id;
+    }
+    public String getName() {
+        return name;
+    }
+}
+```
+发送事件:
+```
+RxBus.get().postNext(new UserEvent (1, "yoyo"));
+```
+最后注意：在生命周期结束的地方取消订阅事件，代码如下：
+```
+@Override
+protected void onDestroy() {
+    super.onDestroy();
+    if(!rxSubscription.isUnsubscribed()) {
+        rxSubscription.unsubscribe();
+    }
+}
+```
 # 百分比布局
 ## 鸿洋的
 https://github.com/hongyangAndroid/android-percent-support-extend
@@ -208,3 +259,6 @@ compile 'com.zhy:percent-support-extends:1.1.1'
 
     </android.support.percent.PercentRelativeLayout>
 ```
+# 注解
+## dagger
+http://www.open-open.com/lib/view/open1474442495481.html#articleHeader6
