--- a/android/收藏.md
+++ b/android/收藏.md
@@ -1,18 +1,5 @@
 # 目标
 https://kuaibao.qq.com/s/20161017A08F2000
-# mvp架构
-http://mp.weixin.qq.com/s?__biz=MzI3MDE0NzYwNA==&mid=2651433991&idx=1&sn=2bbb3930826ee7981e2a654815ac8781&chksm=f128857cc65f0c6a59bae2104879e8b4d55804586d2ca095f364308618aea8ebb86a2b5a09fe&mpshare=1&scene=1&srcid=1021x7LwR8shfk2gtOzeuHy7#rd
-# 沃森AI智能系统
-https://kuaibao.qq.com/s/TEC2016102704277000
-# 框架
-https://kuaibao.qq.com/s/20161118C00E0F00
-## 框架：Rxjava + retrofit + dagger2 + mvp
-http://xuyushi.github.io/2016/06/18/Android%20APP%20%E6%96%B0%E6%A1%86%E6%9E%B6/
-## 最新android APP框架介绍
-http://blog.csdn.NET/u013278099/article/details/51485476?ref=myread
-# GSON
-http://www.jianshu.com/p/e740196225a4
-http://blog.csdn.net/axuanqq/article/details/51441590
 # soket
 利用PHP框架做手机APP开发需要考虑两种可能：
        第一：如果需要即时通讯，也就是需要手机客户端与服务端保持TCP长连接，服务端需要向客户端推送数据的时候可以随时通过这个长连接发送数据给客户端，这样便能做到客户端与服务端及时通讯甚至客户端与客户端及时通讯。做到这需要PHP能维持很多客户端连接，并且需要多进程支持，支持自己的通讯协议。这样的应用传统的nginx+php-fpm + 传统的php框架是做不到的。如果是长连接即时通讯类的服务器框架推荐一看下workerman，它是就是一个php的socket服务器框架，非常适合做手机后台服务器框架。
@@ -23,5 +10,13 @@ https://kuaibao.qq.com/s/20161129C01KQW00
 # TwinklingRefreshLayout
 持下拉刷新和上拉加载的 RefreshLayout,自带越界回弹效果，支持 RecyclerView,AbsListView,ScrollView,WebView
 https://github.com/lcodecorex/TwinklingRefreshLayout
-# 蓝牙
-http://m.2cto.com/kf/201608/537390.html
+# 黑
+https://kuaibao.qq.com/s/20161216A0076Q00
+https://buluo.qq.com/p/detail.html?bid=11151&pid=8536346-1479031673&from=share_qq
+# 啦啦啦
+2017年程序员必看的纪录片
+
+还有那个视频
+http://www.bilibili.com/video/av7852648/
+# 吸顶效果
+http://mp.weixin.qq.com/s/7042TWjfyUr6qny185u__Q
